<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">

	<modelVersion>4.0.0</modelVersion>
	<prerequisites>
		<maven>3.0</maven>
	</prerequisites>

    <!-- build trigger test -->
	<parent>
		<groupId>org.polymap</groupId>
		<artifactId>org.polymap.config.parent</artifactId>
		<version>1.0.0-SNAPSHOT</version>
		<relativePath>../org.polymap.config.parent/pom.xml</relativePath>
	</parent>

	<artifactId>org.polymap.parent</artifactId>
	<packaging>pom</packaging>

	<properties>
		<maven-resources-plugin-version>2.7</maven-resources-plugin-version>
		<maven-compiler-plugin-version>3.3</maven-compiler-plugin-version>
		<maven-antrun-plugin-version>1.8</maven-antrun-plugin-version>
		<maven-install-plugin-version>2.5.2</maven-install-plugin-version>
		<maven-surefire-plugin-version>2.19</maven-surefire-plugin-version>
		<maven-scm-plugin-version>1.9.4</maven-scm-plugin-version>
		<maven-assembly-plugin-version>2.6</maven-assembly-plugin-version>
		<maven-release-plugin-version>2.5.3</maven-release-plugin-version>
		<build-helper-maven-plugin-version>1.9.1</build-helper-maven-plugin-version>
		<exec-maven-plugin-version>1.3.2</exec-maven-plugin-version>
		<junit-version>4.12</junit-version>
		<maven-jxr-plugin-version>2.5</maven-jxr-plugin-version>
		<maven-project-info-reports-plugin-version>2.7</maven-project-info-reports-plugin-version>
		<java-compile-version>1.8</java-compile-version>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.encoding>ISO-8859-1</project.encoding>
		<file.encoding>${project.encoding}</file.encoding>
		<project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
		<project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
		<memoryInitial>128m</memoryInitial>
		<memoryMaximum>1024m</memoryMaximum>
		<memoryPermSizeArgs>-XX:PermSize=256m -XX:MaxPermSize=256m</memoryPermSizeArgs>
		<memoryArgs>-Xms${memoryInitial} -Xmx${memoryMaximum}</memoryArgs>
		<encodingArgs>-Dfile.encoding=${file.encoding}</encodingArgs>
	</properties>

	<build>
		<finalName>${project.artifactId}-${project.version}-${branchName}</finalName>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<version>${tycho-version}</version>
				<executions>
					<execution>
						<id>attach-source</id>
						<goals>
							<goal>plugin-source</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin-version}</version>
				<executions>
					<execution>
						<id>test</id>
						<phase>test</phase>
						<configuration>
							<testClassesDirectory>${project.build.outputDirectory}</testClassesDirectory>
						</configuration>
						<goals>
							<goal>test</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin-version}</version>
					<configuration>
						<source>>${java-compile-version}</source>
						<target>>${java-compile-version}</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-compiler-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<encoding>${project.encoding}</encoding>
						<meminitial>${memoryInitial}</meminitial>
						<maxmem>${memoryMaximum}</maxmem>
						<source>${java-compile-version}</source>
						<target>${java-compile-version}</target>
						<verbose>true</verbose>
						<compilerArgument>-err:-forbidden</compilerArgument>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-surefire-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<useUIHarness>false</useUIHarness>
						<useUIThread>false</useUIThread>
						<argLine />
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>target-platform-configuration</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<resolver>p2</resolver>
						<pomDependencies>consider</pomDependencies>
						<environments>
							<!-- environment>
								<os>win32</os>
								<ws>win32</ws>
								<arch>x86</arch>
							</environment>
							<environment>
								<os>win32</os>
								<ws>win32</ws>
								<arch>x86_64</arch>
							</environment>
							<environment>
								<os>macosx</os>
								<ws>cocoa</ws>
								<arch>x86_64</arch>
							</environment>
							<environment>
								<os>macosx</os>
								<ws>cocoa</ws>
								<arch>x86</arch>
							</environment>
							<environment>
								<os>linux</os>
								<ws>gtk</ws>
								<arch>x86</arch>
							</environment-->
							<environment>
								<os>linux</os>
								<ws>gtk</ws>
								<arch>x86_64</arch>
							</environment>
						</environments>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>${maven-resources-plugin-version}</version>
					<configuration>
						<encoding>${project.encoding}</encoding>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>${maven-antrun-plugin-version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>${maven-deploy-plugin-version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>${maven-install-plugin-version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-scm-plugin</artifactId>
					<version>${maven-scm-plugin-version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>${maven-assembly-plugin-version}</version>
				</plugin>
				<plugin>
					<artifactId>maven-release-plugin</artifactId>
					<version>${maven-release-plugin-version}</version>
					<configuration>
						<preparationGoals>clean -DnewVersion=${releaseVersion} -Dprudent=true org.eclipse.tycho:tycho-versions-plugin:set-version verify scm:checkin</preparationGoals>
						<arguments>-Prelease</arguments>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit-version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<repositories>
		<repository>
			<id>polymap4_target</id>
			<layout>p2</layout>
			<url>${polymap4_target}</url>
		</repository>
	</repositories>
</project>
